--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission>ACCESS_FINE_LOCATION" />
    <application
         android:label="vyam_vandor"
         android:name="${applicationName}"
@@ -36,5 +37,7 @@
             <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="high_importance_channel" />
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyC1HHe1ulw07w6Cz-UirhV5d2Pm_GUJW38"/>
     </application>
 </manifest>
