--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   auto_size_text: ^3.0.0
   location: ^4.2.0
+  syncfusion_flutter_datepicker: ^20.1.57
 
 
 
@@ -120,9 +121,9 @@ flutter:
     - family: Profileicon
       fonts:
       - asset: Assets/Images/Profileicon.ttf
-    - family: PoppinsSemiBold
-      fonts:
-        - asset: Assets\Fonts\Poppins-SemiBold.ttf
+#    - family: PoppinsSemiBold
+#      fonts:
+#        - asset: Assets\Fonts\Poppins-SemiBold.ttf
 
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
