--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
-
+# Android related
+**/android/key.proparties
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
 /android/app/release
+
