--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission>ACCESS_FINE_LOCATION" />
    <application
-        android:label="vyam_vandor"
+        android:label="VYAM Partner"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
