--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+3
+version: 2.0.0+5
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
@@ -46,7 +46,7 @@ dependencies:
   cloud_firestore: ^3.1.10
   geolocator: ^8.2.0
   geocoding: ^2.0.2
-  permission_handler: ^9.2.0
+#  permission_handler: ^9.2.0
   firebase_auth: ^3.3.9
   image_picker: ^0.8.4+4
   firebase_storage: ^10.2.4
