--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+6
+version: 1.0.0+6
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
@@ -61,6 +61,8 @@ dependencies:
   location: ^4.2.0
   syncfusion_flutter_datepicker: ^20.1.47
   badges: ^2.0.2
+  firebase_remote_config: ^2.0.11
+
 
 
 
